Styles of list page

--- a/src/assets/styles/PokemonCards.css
+++ b/src/assets/styles/PokemonCards.css
@@ -5,10 +5,26 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border: 2px solid red;
-  border-radius: 20px;
+  width: 10%;
+  border-radius: 10px;
+  box-shadow: 2px 2px 1px 3px rgb(59, 58, 58);
+  background: rgb(232, 241, 230);
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    119deg,
+    rgba(255, 255, 255, 1) 9%,
+    rgba(204, 204, 184, 1) 48%,
+    rgba(199, 199, 186, 1) 92%
+  );
 }
 
 .main :hover {
   cursor: pointer;
+}
+
+.main-name {
+  background: rgb(245, 241, 241);
+  border-radius: 10px;
+  padding: 0 5px;
+  border: 2px solid rgb(133, 129, 129);
 }
