--- a/src/assets/styles/GetPokemon.css
+++ b/src/assets/styles/GetPokemon.css
@@ -5,3 +5,18 @@
   align-items: center;
   justify-content: center;
 }
+
+.search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 15px 0;
+}
+
+.search__input {
+  border: 2px solid rgb(133, 129, 129);
+  border-radius: 20px;
+  min-width: 30%;
+  text-align: center;
+  padding: 8px;
+}
