--- a/src/assets/styles/Navbar.css
+++ b/src/assets/styles/Navbar.css
@@ -11,3 +11,13 @@
 .navbar-title {
   color: #fff;
 }
+
+@media screen and (max-width: 330px) {
+  .navbar h1 {
+    font-size: 2.5rem;
+  }
+
+  .navbar {
+    justify-content: center;
+  }
+}
