--- a/src/assets/styles/loader.css
+++ b/src/assets/styles/loader.css
@@ -2,4 +2,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
 }
