--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -9,3 +9,10 @@
   font-size: 2.8rem;
   background-color: #f0efeb;
 }
+
+@media screen and (max-width: 400px) {
+  .home__titles h1,
+  h2 {
+    font-size: 1.5rem;
+  }
+}
