--- a/src/assets/styles/PokemonDetails.css
+++ b/src/assets/styles/PokemonDetails.css
@@ -58,6 +58,10 @@
 }
 
 @media screen and (max-width: 400px) {
+  .details__container {
+    width: 80vw;
+  }
+
   .details__container--info {
     width: 90%;
     font-size: 20px;
