--- a/src/assets/styles/Home.css
+++ b/src/assets/styles/Home.css
@@ -10,9 +10,12 @@
   background-color: #f0efeb;
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 480px) {
   .home__titles h1,
   h2 {
+    font-size: 1.5rem;
+  }
+  .btn h1 {
     font-size: 1.5rem;
   }
 }
